[package]
name = "deno_server"
version = "0.1.0"
edition = "2024"

[dependencies]
deno_core = "0.343.0"
deno_error = "0.5.6"
deno_unsync = "0.4.2"
scopeguard = "1.2.0"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
pyo3 = {version = "0.25.1", features = ["auto-initialize"] }

